#83 like-dislike spacing fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -972,7 +972,7 @@ dialog[open] {
 
     .snap-stats {
         display: flex;
-        gap: var(--spacing-m);
+        gap: var(--spacing-s);
         margin-top: auto;
     }
 
@@ -997,7 +997,7 @@ dialog[open] {
     display: flex;
     justify-content: end;
     align-items: center;
-    gap: 0.5em;
+    gap: var(--spacing-s);
 
     label {
         display: flex;
